fixed peanuts on mobile

--- a/assets/source/css/app.css
+++ b/assets/source/css/app.css
@@ -9194,7 +9194,7 @@ table.feature-table {
   left: 50%;
   width: 65px;
   height: 114px;
-  margin-left: -180px;
+  margin-left: -195px;
   top: 395px; }
 
 @media screen and (min-width: 576px) {
