--- a/assets/source/sass/pages/_features.scss
+++ b/assets/source/sass/pages/_features.scss
@@ -275,7 +275,7 @@
     width: 235px;
     height: 210px;
     margin-left: -240px;
-    top: 471px
+    top: 471px;
 }
 
 @media screen and (min-width:576px) {
@@ -299,7 +299,7 @@
     left: 50%;
     width: 65px;
     height: 114px;
-    margin-left: -180px;
+    margin-left: -195px;
     top: 395px;
 }
 
